update version kube-prometheus

--- a/apps/argocd-apps/prometheus.yaml
+++ b/apps/argocd-apps/prometheus.yaml
@@ -6,7 +6,7 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  project: default
+  project: observabilidade
   
   source:
     repoURL: https://github.com/lotechdevops/apps-argocd.git
