--- a/apps/observabilidade/prometheus/Chart.yaml
+++ b/apps/observabilidade/prometheus/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v2
 name: prometheus-stack
-description: Prometheus observabilidade stack
+description: Complete Prometheus monitoring stack with Operator, Grafana and Alertmanager
 type: application
 version: 1.0.0
-appVersion: "0.85.0"
+appVersion: "v0.79.0"
 
 dependencies:
-  - name: kube-prometheus
-    version: 11.3.10
-    repository: https://charts.bitnami.com/bitnami
+  - name: kube-prometheus-stack
+    version: 79.5.0
+    repository: https://prometheus-community.github.io/helm-charts
