--- a/apps/observabilidade/prometheus/values.yaml
+++ b/apps/observabilidade/prometheus/values.yaml
@@ -1,86 +1,25 @@
-# Configuração para kube-prometheus-stack (Prometheus Community)
-# Usa imagens oficiais do quay.io (sempre disponíveis)
-
-# Nome customizado
-fullnameOverride: prometheus
-
-# Prometheus Operator
-prometheusOperator:
-  enabled: true
-
-# Prometheus
-prometheus:
-  enabled: true
-  
-  prometheusSpec:
-    # Retenção
-    retention: 10d
-    
-    # Storage
-    storageSpec:
-      volumeClaimTemplate:
-        spec:
-          storageClassName: nfs-storage
-          accessModes: ["ReadWriteOnce"]
-          resources:
-            requests:
-              storage: 8Gi
-    
-    # Recursos
-    resources:
-      requests:
-        cpu: 200m
-        memory: 512Mi
-      limits:
-        cpu: 1000m
-        memory: 2Gi
-    
-    # Service Monitors (descoberta automática)
-    serviceMonitorSelectorNilUsesHelmValues: false
-    podMonitorSelectorNilUsesHelmValues: false
-    ruleSelectorNilUsesHelmValues: false
-  
-  # Ingress
-  ingress:
-    enabled: true
-    ingressClassName: nginx
-    annotations:
-      nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    hosts:
-      - prometheus.devopsr66.com
-    paths:
-      - /
-    pathType: Prefix
-    tls:
-      - secretName: devopsr66-tls
-        hosts:
-          - prometheus.devopsr66.com
+# Configuração completa do kube-prometheus-stack
+fullnameOverride: "prometheus"
 
 # Alertmanager
 alertmanager:
   enabled: true
   
-  alertmanagerSpec:
-    # Storage
-    storage:
-      volumeClaimTemplate:
-        spec:
-          storageClassName: nfs-storage
-          accessModes: ["ReadWriteOnce"]
-          resources:
-            requests:
-              storage: 2Gi
-    
-    # Recursos
-    resources:
-      requests:
-        cpu: 100m
-        memory: 128Mi
-      limits:
-        cpu: 500m
-        memory: 512Mi
+  # Ingress do Alertmanager
+  ingress:
+    enabled: true
+    ingressClassName: "nginx"
+    annotations:
+      nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    hosts:
+      - alertmanager.devopsr66.com
+    paths: /
+    tls:
+      - secretName: "devopsr66-tls"
+        hosts:
+          - alertmanager.devopsr66.com
   
-  # Configuração
+  # Configuração do Alertmanager
   config:
     global:
       resolve_timeout: 5m
@@ -114,21 +53,16 @@ alertmanager:
               *Instância:* {{ .CommonLabels.instance }}
               *Descrição:* {{ .CommonAnnotations.description }}
   
-  # Ingress
-  ingress:
-    enabled: true
-    ingressClassName: nginx
-    annotations:
-      nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    hosts:
-      - alertmanager.devopsr66.com
-    paths:
-      - /
-    pathType: Prefix
-    tls:
-      - secretName: devopsr66-tls
-        hosts:
-          - alertmanager.devopsr66.com
+  # Storage do Alertmanager
+  alertmanagerSpec:
+    storage:
+      volumeClaimTemplate:
+        spec:
+          storageClassName: nfs-storage
+          accessModes: ["ReadWriteOnce"]
+          resources:
+            requests:
+              storage: 2Gi
 
 # Grafana
 grafana:
@@ -136,7 +70,7 @@ grafana:
   
   adminPassword: admin  # ⚠️ MUDE ISSO!
   
-  # Ingress
+  # Ingress do Grafana
   ingress:
     enabled: true
     ingressClassName: nginx
@@ -150,7 +84,7 @@ grafana:
         hosts:
           - grafana.devopsr66.com
   
-  # Storage
+  # Storage do Grafana
   persistence:
     enabled: true
     storageClassName: nfs-storage
@@ -163,12 +97,64 @@ grafana:
     datasources:
       enabled: true
 
+# Prometheus
+prometheus:
+  enabled: true
+  
+  # Ingress do Prometheus
+  ingress:
+    enabled: true
+    ingressClassName: "nginx"
+    annotations:
+      nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    hosts:
+      - prometheus.devopsr66.com
+    paths:
+      - /
+    tls:
+      - secretName: "devopsr66-tls"
+        hosts:
+          - prometheus.devopsr66.com
+  
+  # Configurações do Prometheus
+  prometheusSpec:
+    # Retenção
+    retention: 10d
+    
+    # Storage
+    storageSpec:
+      volumeClaimTemplate:
+        spec:
+          storageClassName: nfs-storage
+          accessModes: ["ReadWriteOnce"]
+          resources:
+            requests:
+              storage: 8Gi
+    
+    # Recursos
+    resources:
+      requests:
+        cpu: 200m
+        memory: 512Mi
+      limits:
+        cpu: 1000m
+        memory: 2Gi
+    
+    # Service Monitors (descoberta automática)
+    serviceMonitorSelectorNilUsesHelmValues: false
+    podMonitorSelectorNilUsesHelmValues: false
+    ruleSelectorNilUsesHelmValues: false
+
 # Node Exporter
 nodeExporter:
   enabled: true
 
 # Kube State Metrics
 kubeStateMetrics:
+  enabled: true
+
+# Prometheus Operator
+prometheusOperator:
   enabled: true
 
 # Componentes do Kubernetes
@@ -198,16 +184,8 @@ defaultRules:
     etcd: false
     general: true
     k8s: true
-    kubeApiserverAvailability: true
-    kubeApiserverSlos: true
     kubelet: true
     kubeProxy: true
-    kubernetesApps: true
-    kubernetesResources: true
-    kubernetesStorage: true
-    kubernetesSystem: true
-    kubeStateMetrics: true
-    network: true
+    kubernetes: true
     node: true
     prometheus: true
-    prometheusOperator: true
