--- a/projects/observabilidade.yaml
+++ b/projects/observabilidade.yaml
@@ -1,23 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: observabilidade
+  name: observability
   namespace: argocd
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
 spec:
   description: Projeto de Observabilidade - Prometheus, Grafana, Alertmanager
   
   # Repositórios permitidos
   sourceRepos:
     - https://github.com/lotechdevops/apps-argocd.git
-    - https://charts.bitnami.com/bitnami
     - https://prometheus-community.github.io/helm-charts
     - https://grafana.github.io/helm-charts
   
   # Destinos permitidos
   destinations:
-    - namespace: observabilidade
+    - namespace: observability
       server: https://kubernetes.default.svc
     - namespace: kube-system
       server: https://kubernetes.default.svc
