--- a/apps/observabilidade/prometheus/Chart.yaml
+++ b/apps/observabilidade/prometheus/Chart.yaml
@@ -6,5 +6,5 @@ version: 1.0.0
 
 dependencies:
   - name: kube-prometheus-stack
-    version: 79.5.0  # Versão mais recente
+    version: 79.5.0
     repository: https://prometheus-community.github.io/helm-charts
