--- a/apps/argocd-apps/prometheus.yaml
+++ b/apps/argocd-apps/prometheus.yaml
@@ -5,31 +5,33 @@ metadata:
   namespace: argocd
 spec:
   project: observabilidade
-  source:
-    repoURL: git@github.com:lotechdevops/apps-argocd.git
-    targetRevision: main
-    path: apps/observabilidade/prometheus
-    helm:
-      releaseName: prometheus
-      valueFiles:
-        - values.yaml
-      skipCrds: false  
+  sources:
+    - repoURL: https://prometheus-community.github.io/helm-charts
+      chart: kube-prometheus-stack
+      targetRevision: 79.5.0
+      helm:
+        releaseName: prometheus
+        valueFiles:
+          - $values/apps/observabilidade/prometheus/values.yaml
+        skipCrds: false
+    - repoURL: git@github.com:lotechdevops/apps-argocd.git
+      targetRevision: main
+      ref: values
   destination:
     server: https://kubernetes.default.svc
-    namespace: observabilidade  
+    namespace: observabilidade
   syncPolicy:
     automated:
       enabled: true
       prune: true
-      selfHeal: true
+      selfHeal: true  
     retry:
-      limit: 10
+      limit: 5
       backoff:
-        duration: 15s
+        duration: "5s"
         factor: 2
-        maxDuration: 5m
+        maxDuration: "3m"
     syncOptions:
       - CreateNamespace=true
       - PruneLast=true
       - ServerSideApply=true
-      - Force=true
