--- a/apps/applications/prometheus.yaml
+++ b/apps/applications/prometheus.yaml
@@ -4,7 +4,7 @@ metadata:
   name: prometheus
   namespace: argocd
 spec:
-  project: observabilidade
+  project: prometheus
   sources:
     - repoURL: https://prometheus-community.github.io/helm-charts
       chart: kube-prometheus-stack
