--- a/apps/values/grafana/values.yaml
+++ b/apps/values/grafana/values.yaml
@@ -212,7 +212,8 @@ extraVolumeMounts: []
 extraVolumes: []
 lifecycleHooks: {}
 plugins: []
-datasources: prometheus
+datasources: 
+  - name: Prometheus
 alerting: {}
 notifiers: {}
 dashboardProviders: {}
