--- a/apps/values/grafana/values.yaml
+++ b/apps/values/grafana/values.yaml
@@ -212,8 +212,15 @@ extraVolumeMounts: []
 extraVolumes: []
 lifecycleHooks: {}
 plugins: []
-datasources: 
-  - name: Prometheus
+datasources:
+  datasources.yaml:
+    apiVersion: 1
+    datasources:
+      - name: Prometheus
+        type: prometheus
+        access: proxy
+        url: http://prometheus-prometheus.observabilidade.svc.cluster.local:9090
+        isDefault: true
 alerting: {}
 notifiers: {}
 dashboardProviders: {}
