--- a/apps/values/prometheus/values.yaml
+++ b/apps/values/prometheus/values.yaml
@@ -329,6 +329,7 @@ alertmanager:
       pullPolicy: IfNotPresent
     useExistingSecret: true
     secrets:
+      - alertmanager-telegram-chats
       - alertmanager-slack-webhooks
       - alertmanager-config
     automountServiceAccountToken: true
