--- a/apps/applications/alertmanager.yaml
+++ b/apps/applications/alertmanager.yaml
@@ -9,6 +9,8 @@ spec:
     repoURL: git@github.com:lotechdevops/apps-argocd.git  # Alterar para seu repo
     targetRevision: main
     path: apps/values/alertmanager
+    directory:
+      recurse: true
   destination:
     server: https://kubernetes.default.svc
     namespace: observabilidade
