--- a/apps/values/alertmanager/config/secret-alertmanager.yaml
+++ b/apps/values/alertmanager/config/secret-alertmanager.yaml
@@ -64,7 +64,7 @@ stringData:
       - name: telegram-default
         telegram_configs:
           - bot_token_file: /etc/alertmanager/secrets/alertmanager-telegram-chats/telegram-token
-            chat_id_file: /etc/alertmanager/secrets/alertmanager-telegram-chats/telegram-chat-id
+            chat_id: -1003422927314
             send_resolved: true
             parse_mode: HTML
             message: |-
